# multiagent-inventory-system

./: README.md  REFLECTION.md  Untitled diagram-2025-10-09-150002.mmd  info_about_agent_class_pydantic-ai.txt  main.py  multiagent_inventory_system.py  munder_difflin.db  project_starter.py  pyproject.toml  test_results.csv
