[project]
name = "multiagent-inventory-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.3",
    "pydantic-ai>=1.0.15",
    "pylint>=3.3.9",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]
